# up-simulator

./: .gitignore  CONTRIBUTORS.adoc  README.adoc  README.md  requirements.txt  run.py  setup.cfg  setup.py  setup_simulator.py
.github/: ruff.toml
.github/workflows/: python-checker.yml
AndroidProxy/: .gitignore  settings.gradle
AndroidProxy/app/: build.gradle
AndroidProxy/gradle/: libs.versions.toml
core/: abstract_service.py  exceptions.py  protobuf_autoloader.py  transport_layer.py
core/protofiles/: uservices_options_pb2.py
core/resource_catalog/: ResourceCatalog.csv
mockservices/: braking.py  cabin_climate.py  hello_world.py
protofiles/: units_pb2.py  uprotocol_options_pb2.py  uservices_options_pb2.py
resource_catalog/: ResourceCatalog.json
screenshots/: uSimulator_overview.drawio
simulator/: run.py  setup.cfg  setup.py  vsomeip.json
simulator/core/: abstract_service.py  binder_utransport.py  exceptions.py  protobuf_autoloader.py  someip_helper.py  transport_layer.py  vehicle_service_utils.py
simulator/mockservices/: braking.py  cabin_climate.py  chassis.py  engine.py  exterior.py  hello_world.py  horn.py  mirrors.py  seating.py  suspension.py  transmission.py  vehicle.py
simulator/tools/: common_methods.py  create_pub_sub_json_for_ui.py  (+5 more)
simulatorui/: __init__.py  config.py  pub-sub.json  routes.py  rpc.json  services.json
temporary_wheel/: up_client_zenoh_python-1.0.0-py3-none-any.whl  up_python-1.5-py3-none-any.whl  up_python-1.5.1-py3-none-any.whl  up_python-1.5.2-py3-none-any.whl  uprotocol_python-1.0.0-py3-none-any.whl  uprotocol_zenoh_python-1.0.0-py3-none-any.whl
tools/: create_services_json_for_ui.py  pull_and_compile_protos.py
utils/: common_handlers.py  common_util.py  constant.py  file_utils.py  protobuf_autoloader.py  socket_utils.py
(+179 files in other folders)
