[metadata]
name = uprotocol-platform-simulator
author = Neelam Kushwah
author_email = neelam.kushwah@gm.com
description = uSimulator
version = 1.0.0
keywords =
  uprotocol
  platform
  simulator

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
    flask
    Werkzeug
    jinja2
    pure-python-adb
    Flask-SocketIO
    protobuf

[options.package_data]
;  uprotocol-platform-simulator = *.bat, *.py, *.sh, apps/**, bullettrain_sample_files/**, utils/**, wheel/**, registry_config/**, sample_scripts/**
