[metadata]
name = uprotocol-platform-simulator
author = Neelam Kushwah
author_email = neelam.kushwah@gm.com
description = uSimulator
version = 1.0.0
keywords =
  uprotocol
  platform
  simulator

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
    flask==3.0.1
    Werkzeug==3.0.1
    jinja2==3.1.3
    pure-python-adb==0.3.0.dev0
    Flask-SocketIO==5.3.6
    protobuf==4.25.2
    googleapis-common-protos==1.62.0
    gitpython==3.1.41

[options.package_data]
 uprotocol-platform-simulator = *.py, simulatorui/**, utils/**, protofiles/**, mockservices/**, core/**
